# kafka_dump

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
