[package]
name = "kafka_dump"
version = "0.1.0"
authors = ["Tino Adams <tino.adams@qantas.com.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.26.0"
futures = "^0.3.0"
log = "0.4.6"
env_logger = "0.8.4"
rdkafka-sys = "4.0.0+1.6.1"
serde_json = "^1.0.38"
dotenv = "0.15.0"
schema_registry_converter = "2.0.2"
structopt = "0.3.11"
quicli = "0.4.0"
failure = "0.1.6"
exitfailure = "0.5.1"
clap-verbosity-flag = "0.3.1"
simple_logger = "1.6.0"
tokio = { version="1.8.0", features=["full"]}
rand = "0.8.4"
base64 = "0.13.0"
rev_lines = "0.2.1"